--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,3 +1,4 @@
+auxiliary.org-netbeans-modules-php-phpdoc.target=C:\\xampp\\htdocs\\HazAClass\\Docs
 copy.src.files=false
 copy.src.target=C:\\xampp\\htdocs\\HazAClass
 index.file=
