added first testcases

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -2,8 +2,14 @@ ignore.path=
 include.path=\
     ${php.global.include.path}
 php.version=PHP_53
+phpunit.bootstrap=Tests/bootstrap.php
+phpunit.bootstrap.create.tests=true
+phpunit.configuration=
+phpunit.run.test.files=false
+phpunit.suite=
 source.encoding=UTF-8
 src.dir=.
 tags.asp=false
 tags.short=true
+test.src.dir=Tests
 web.root=.
