--- a/build.xml
+++ b/build.xml
@@ -1,10 +1,15 @@
-
+<?xml version="1.0" encoding="UTF-8"?>
 <project name="HazAClass" default="build" basedir=".">
-    <target name="clean">
-  <!-- Clean up -->
-        <delete dir="build"/>
+    <property name="source" value="src"/>
 
-  <!-- Create build directories -->
+    <target name="clean"
+         description="Clean up and create artifact directories">
+        <delete dir="${basedir}/build/api"/>
+        <delete dir="${basedir}/build/code-browser"/>
+        <delete dir="${basedir}/build/coverage"/>
+        <delete dir="${basedir}/build/logs"/>
+        <delete dir="${basedir}/build/pdepend"/>
+
         <mkdir dir="${basedir}/build/api"/>
         <mkdir dir="${basedir}/build/code-browser"/>
         <mkdir dir="${basedir}/build/coverage"/>
@@ -12,69 +17,75 @@
         <mkdir dir="${basedir}/build/pdepend"/>
     </target>
 
- <!-- Run unit tests and generate junit.xml and clover.xml -->
-    <target name="phpunit">
-        <exec executable="phpunit" failonerror="true" />
+    <target name="phpunit" description="Run unit tests using PHPUnit and generates junit.xml and clover.xml">
+        <exec executable="phpunit" failonerror="true"/>
     </target>
 
- <!-- Run pdepend, phpmd, phpcpd, and phpcs in parallel -->
-    <target name="parallelTasks">
-        <parallel>
-            <antcall target="pdepend"/>
-            <antcall target="phpmd"/>
+    <target name="parallelTasks" description="Run the pdepend, phpmd, phpcpd, phpcs, phpdoc and phploc tasks in parallel using a maximum of 2 threads.">
+        <parallel threadCount="2">
+            <sequential>
+                <antcall target="pdepend"/>
+                <antcall target="phpmd"/>
+            </sequential>
             <antcall target="phpcpd"/>
             <antcall target="phpcs"/>
-<!--            <antcall target="phpdoc"/> -->
+            <antcall target="phpdoc"/>
+            <antcall target="phploc"/>
         </parallel>
     </target>
 
- <!-- Generate jdepend.xml and software metrics charts -->
-    <target name="pdepend">
+    <target name="pdepend" description="Generate jdepend.xml and software metrics charts using PHP_Depend">
         <exec executable="pdepend">
-            <arg line="--jdepend-xml=${basedir}/build/logs/jdepend.xml HazAClass" />
+            <arg line="--jdepend-xml=${basedir}/build/logs/jdepend.xml
+              --jdepend-chart=${basedir}/build/pdepend/dependencies.svg
+              --overview-pyramid=${basedir}/build/pdepend/overview-pyramid.svg
+              ${source}" />
         </exec>
     </target>
 
- <!-- Generate pmd.xml -->
-    <target name="phpmd">
+    <target name="phpmd" description="Generate pmd.xml using PHPMD">
         <exec executable="phpmd">
-            <arg line="HazAClass xml codesize,unusedcode
+            <arg line="${source}
+              xml
+              build/phpmd.xml
               --reportfile ${basedir}/build/logs/pmd.xml" />
         </exec>
     </target>
 
- <!-- Generate pmd-cpd.xml -->
-    <target name="phpcpd">
+    <target name="phpcpd" description="Generate pmd-cpd.xml using PHPCPD">
         <exec executable="phpcpd">
-            <arg line="--log-pmd ${basedir}/build/logs/pmd-cpd.xml HazAClass" />
+            <arg line="--log-pmd ${basedir}/build/logs/pmd-cpd.xml ${source}" />
         </exec>
     </target>
 
- <!-- Generate checkstyle.xml -->
-    <target name="phpcs">
+    <target name="phploc" description="Generate phploc.csv">
+        <exec executable="phploc">
+            <arg line="--log-csv ${basedir}/build/logs/phploc.csv ${source}" />
+        </exec>
+    </target>
+
+    <target name="phpcs" description="Generate checkstyle.xml using PHP_CodeSniffer">
         <exec executable="phpcs" output="/dev/null">
             <arg line="--report=checkstyle
               --report-file=${basedir}/build/logs/checkstyle.xml
-              --standard=Zend
-              HazAClass" />
+              --standard=build/phpcs.xml
+              ${source}" />
         </exec>
     </target>
 
- <!-- Generate API documentation -->
-    <target name="phpdoc">
+    <target name="phpdoc" description="Generate API documentation using PHPDocumentor">
         <exec executable="phpdoc">
-            <arg line="-d HazAClass -t build/api" />
+            <arg line="-d ${source} -t ${basedir}/build/api" />
         </exec>
     </target>
 
-    <target name="phpcb">
+    <target name="phpcb" description="Aggregate tool output with PHP_CodeBrowser">
         <exec executable="phpcb">
             <arg line="--log    ${basedir}/build/logs
-              --source ${basedir}/HazAClass
+              --source ${source}
               --output ${basedir}/build/code-browser" />
         </exec>
     </target>
 
-    <target name="build" depends="clean,parallelTasks,phpunit,phpcb,phpdoc"/>
-<!--    <target name="build" depends="clean,phpunit"/>-->
+    <target name="build" depends="clean,parallelTasks,phpunit,phpcb"/>
 </project>
