Added evocator with tests

--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,6 +1,7 @@
 auxiliary.org-netbeans-modules-php-phpdoc.target=C:\\xampp\\htdocs\\HazAClass\\Docs
 copy.src.files=false
 copy.src.target=C:\\xampp\\htdocs\\HazAClass
+getter.setter.method.name.generation=AS_JAVA
 index.file=
 remote.connection=Delegate_X2
 remote.directory=/HazAClass
