--- a/build.xml
+++ b/build.xml
@@ -45,10 +45,8 @@
 
     <target name="phpmd" description="Generate pmd.xml using PHPMD">
         <exec executable="phpmd">
-            <arg line="${source}
-              xml
-              build/phpmd.xml
-              --reportfile ${basedir}/build/logs/pmd.xml" />
+<!--            <arg line="${source} xml build/phpmd.xml --reportfile ${basedir}/build/logs/pmd.xml" />-->
+            <arg line="${source} xml codesize --reportfile ${basedir}/build/logs/pmd.xml" />
         </exec>
     </target>
 
