--- a/build.xml
+++ b/build.xml
@@ -45,19 +45,19 @@
 
     <target name="phpmd" description="Generate pmd.xml using PHPMD">
         <exec executable="phpmd">
-            <arg line="${source} xml codesize --reportfile ${basedir}/build/logs/pmd.xml" />
+            <arg line=". xml codesize --reportfile ${basedir}/build/logs/pmd.xml" />
         </exec>
     </target>
 
     <target name="phpcpd" description="Generate pmd-cpd.xml using PHPCPD">
         <exec executable="phpcpd">
-            <arg line="--log-pmd ${basedir}/build/logs/pmd-cpd.xml ${source}" />
+            <arg line="--log-pmd ${basedir}/build/logs/pmd-cpd.xml ." />
         </exec>
     </target>
 
     <target name="phploc" description="Generate phploc.csv">
         <exec executable="phploc">
-            <arg line="--log-csv ${basedir}/build/logs/phploc.csv ${source}" />
+            <arg line="--log-csv ${basedir}/build/logs/phploc.csv ." />
         </exec>
     </target>
 
@@ -66,20 +66,20 @@
             <arg line="--report=checkstyle
               --report-file=${basedir}/build/logs/checkstyle.xml
               --standard=build/phpcs.xml
-              ${source}" />
+              ." />
         </exec>
     </target>
 
     <target name="phpdoc" description="Generate API documentation using PHPDocumentor">
         <exec executable="phpdoc">
-            <arg line="-d ${source} -t ${basedir}/build/api" />
+            <arg line="-d . -t ${basedir}/build/api" />
         </exec>
     </target>
 
     <target name="phpcb" description="Aggregate tool output with PHP_CodeBrowser">
         <exec executable="phpcb">
             <arg line="--log    ${basedir}/build/logs
-              --source ${source}
+              --source .
               --output ${basedir}/build/code-browser" />
         </exec>
     </target>
